--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-yandex-maps": "^4.6.0",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
+    "redux-state-sync": "^3.1.2",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
